[gd_scene load_steps=2 format=3 uid="uid://cmkwov3xl4pb"]

[ext_resource type="Script" uid="uid://sskjun45r52s" path="res://src/scripts/demo/fade_demo.gd" id="1"]

[node name="FadeDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.6, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "FADE TRANSITION DEMO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ShowOverlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Show Black Overlay"

[node name="HideOverlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Hide Black Overlay"

[node name="FadeInButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fade In (to Black)"

[node name="FadeOutButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fade Out (from Black)"

[node name="FullTransitionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Full Transition (In + Out)"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Status" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ready - Click buttons to test fade effects"
horizontal_alignment = 1
vertical_alignment = 1
